--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,11 @@
     "@mui/icons-material": "^5.16.0",
     "@mui/lab": "^5.0.0-alpha.171",
     "@mui/material": "^5.16.0",
-
     "@mui/x-date-pickers": "^7.11.0",
-    "dayjs": "^1.11.12",
-
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.2.0",
     "date-fns": "^3.6.0",
-
+    "dayjs": "^1.11.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
