--- a/client/package.json
+++ b/client/package.json
@@ -16,14 +16,19 @@
     "@mui/lab": "^5.0.0-alpha.171",
     "@mui/material": "^5.16.0",
     "@mui/x-date-pickers": "^7.11.0",
+    "@react-three/drei": "^9.109.5",
+    "@react-three/fiber": "^8.17.5",
     "@stripe/react-stripe-js": "^2.7.3",
     "@stripe/stripe-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
+    "framer-motion": "^11.3.24",
+    "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.24.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
